--- a/templates/splash.html
+++ b/templates/splash.html
@@ -4,7 +4,7 @@
 		<title>Stageclap</title>
 	</head>
 	<body>
-		<nav class="navbar navbar-default">
+		<nav class="navbar navbar-default" id="nbar">
 		  <div class="container-fluid">
 		    <!-- Brand and toggle get grouped for better mobile display -->
 		    <div class="navbar-header">
@@ -14,23 +14,28 @@
 		        <span class="icon-bar"></span>
 		        <span class="icon-bar"></span>
 		      </button>
-		      <a class="navbar-brand" href="#">Stageclap</a>
+		      <a class="navbar-brand" href="#home">Stageclap</a>
 		    </div>
 
 		    <!-- Collect the nav links, forms, and other content for toggling -->
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      <ul class="nav navbar-nav">
-		        <li><a href="#">features</a></li>
-		        <li><a href="#">stage</a></li>
+		        <li><a href="#features">Features</a></li>
+		        <li><a href="#">Stage</a></li>
 		      </ul>
 		      <ul class="nav navbar-nav navbar-right">
 		        <li><a href="#">Sign Up</a></li>
-		        <li><a href="#">
-		        </li>
 		      </ul>
 		    </div><!-- /.navbar-collapse -->
 		  </div><!-- /.container-fluid -->
 		</nav>
+
+		<div id="home">
+			Home
+		</div>
+		<div id="features">
+			Features
+		</div>
 
 		<!-- JavaScript files  
 		==================== -->
@@ -38,5 +43,6 @@
 		<script src="../static/bootstrap/js/bootstrap.js"></script>
 		<link rel="stylesheet" href="../static/bootstrap/css/bootstrap.min.css">
 		<link rel="stylesheet" href="../static/bootstrap/css/bootstrap-theme.min.css">
+		<link rel="stylesheet" href="../static/css/splash.css">
 	</body>
 </html>
