--- a/templates/splash.html
+++ b/templates/splash.html
@@ -37,7 +37,7 @@
 			Features
 		</div>
 
-		<!-- JavaScript files  
+		<!-- JavaScript and CSS files  
 		==================== -->
 		<script src="../static/js/jquery-2.1.3.min.js"></script>
 		<script src="../static/bootstrap/js/bootstrap.js"></script>
